--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
   <p id="nftStatus"></p>
 </div>
 
+<h3>Upload Token Picture:</h3>
+<input type="file" id="tokenImage" accept="image/*"><br><br>
+<img id="tokenImagePreview" style="max-width:200px; display:none;"><br><br>
+
+<h3>Upload NFT Picture:</h3>
+<input type="file" id="nftImage" accept="image/*"><br><br>
+<img id="nftImagePreview" style="max-width:200px; display:none;"><br><br>
+
+<script>
+function previewImage(inputId, previewId) {
+    const fileInput = document.getElementById(inputId);
+    const preview = document.getElementById(previewId);
+
+    fileInput.addEventListener("change", function () {
+        const file = this.files[0];
+        if (file) {
+            const reader = new FileReader();
+            reader.onload = function (e) {
+                preview.src = e.target.result;
+                preview.style.display = "block";
+            }
+            reader.readAsDataURL(file);
+        }
+    });
+}
+previewImage("tokenImage", "tokenImagePreview");
+previewImage("nftImage", "nftImagePreview");
+</script>
+  
+
 <script>
   let provider, signer;
 
